--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.2.2",
+  "version": "0.2.4",
   "name": "react-multi-select-advanced",
   "description": "Multi select filter component with advanced features",
   "author": "Sener <sener@lifetoweb.com> (http://lifetoweb.com)",
@@ -36,7 +36,6 @@
     "build": "rollup -c",
     "start": "rollup -c -w"
   },
-  "dependencies": {},
   "peerDependencies": {
     "react": "^16.7.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.7.0 || ^17.0.0 || ^18.0.0"
@@ -45,14 +44,12 @@
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^10.4.8",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
-    "postcss": "^8.4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.77.2",
-    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-sass": "^1.2.13",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
     "sass": "^1.54.0",
