--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "version": "0.3.0",
+  "version": "0.4.0",
   "name": "react-multi-select-advanced",
   "description": "React multi select filter input with advanced features",
   "author": "Sener <sener@lifetoweb.com> (http://lifetoweb.com)",
   "main": "dist/index.js",
+  "types": "dist/index.js",
   "keywords": [
     "npm",
     "react",
