--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "rollup": "rollup -c",
+    "rollup": "rollup -c --bundleConfigAsCjs",
     "rollup:watch": "rollup -c -w",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -58,8 +58,8 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.0",
     "babel-runtime": "^6.26.0",
@@ -79,7 +79,7 @@
     "rollup-plugin-sass": "^1.12.16",
     "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.56.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.7.4",
     "webpack": "^5.75.0"
   },
   "files": [
